crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__sequences_tests__empty_sequence.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/sequences_tests.rs
---
Q = {}
---
error: empty `{}` is not allowed
  |
1 | Q = {}
  |     ^^
  |
help: sequences must contain at least one expression
